--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,12 +23,16 @@ theme:
   palette: 
     # Palette toggle for light mode
     - scheme: default
+      primary: teal
+      accent: green
       toggle:
         icon: material/weather-sunny
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - scheme: slate
+      primary: blue grey
+      accent: cyan
       toggle:
         icon: material/weather-night
         name: Switch to light mode
