--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,7 +133,7 @@ plugins:
       cards_font: Roboto
       cards_dir: images/social
       cards_color:
-        fill: "#2E2E2E" 
+        fill: "#008080" 
         text: "#FFFFFF"
   - minify:
       minify_html: true
