--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -192,3 +192,4 @@ nav:
   - Home: index.md
   - Functions:
     - OpenAI Functions with Climate API: functions/openai-functions-with-climate-apis.md
+  - Tags: tags.md
