--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -191,6 +191,7 @@ extra_javascript:
 nav:
   - Home: index.md
   - Functions:
+    - OpenAI Functions: functions/openai-functions.md
     - OpenAI Functions with Climate API: functions/openai-functions-with-climate-apis.md
     - OpenAI Functions with Render API: functions/openai-functions-with-render-apis.md
     - Molecule Inventor with GPT-4 Functions: functions/molecule-inventor-with-gpt4-functions.md
